added some minor extra QOL stuff

--- a/views/pages/cardDatabase.ejs
+++ b/views/pages/cardDatabase.ejs
@@ -20,6 +20,7 @@
             <button type="button" id="tabD" onclick="sTab(this.id)">View owned cards</button>
             <div id="displayAll" style="clear:left">
                 <input type="text" class="searchbar" name="sBar" placeholder="SEARCH" onkeyup="searchAll(this.value)">
+                <p style="float:left; margin:0">(click on the card to view its information!)</p>
                 <button style="float:right" onclick="setSort('s1')" class="s1">abc</button>
                 <button style="float:right" onclick="setSort('s2')" class="s2">stars</button>
                 <button style="float:right" onclick="setSort('s3')" class="s3">value</button>
