--- a/views/pages/cardInfo.ejs
+++ b/views/pages/cardInfo.ejs
@@ -23,5 +23,6 @@
             </li>
             <li>Value: $<%=cardInfo.value%> (average price)</li>
         </ul>
+        <a onclick="window.history.back()" style="cursor:pointer; color:rgb(53, 57, 255)">Back</a>
     </body>
 </html>
