--- a/views/pages/deckBuilder.ejs
+++ b/views/pages/deckBuilder.ejs
@@ -22,6 +22,7 @@
     
         <div id="deck" class="deckBuilderTable">
             <input type="text" id="deckName" value="<%- deck.name %>">
+            <label for="deckName">Name</label>
             <h3>Deck</h3>
             <table id="deckCardsTable" class="cardTable" style="height: 90%;">
                 <td class="noMatchMessage" hidden="true">No Cards</td>
