added testing files (not implemented yet)

--- a/views/partials/aio_dld_popups.ejs
+++ b/views/partials/aio_dld_popups.ejs
@@ -29,12 +29,16 @@ hidden="true">
             <tr>
                 <td>
                 <table class="adminTradeTableInfoPopUpTable cardTable">
-                    <tbody></tbody>
+                    <tbody>
+                        <tr><td class="noMatchMessage" hidden="true">No Cards</td></tr>
+                    </tbody>
                 </table>
             </td>
             <td>
                 <table class="adminTradeTableInfoPopUpTable cardTable">
-                    <tbody></tbody>
+                    <tbody>
+                        <tr><td class="noMatchMessage" hidden="true">No Cards</td></tr>
+                    </tbody>
                 </table>
             </td>
             </tr>
