more bugfixes, login protection, wrong user protection

--- a/views/pages/deckBuilder.ejs
+++ b/views/pages/deckBuilder.ejs
@@ -16,7 +16,7 @@
         <div id="collection" class="deckBuilderTable">
             <h3>Collection</h3>
             <table id="collectionCardsTable" class="cardTable" style="height: 90%;">
-                <td class="noMatchMessage" hidden="true">No Cards</td>
+                <tbody></tbody>
             </table>
         </div>
     
@@ -25,11 +25,11 @@
             <label for="deckName">Name</label>
             <h3>Deck</h3>
             <table id="deckCardsTable" class="cardTable" style="height: 90%;">
-                <td class="noMatchMessage" hidden="true">No Cards</td>
+                <tbody></tbody>
             </table>
             <h3>Extra Deck</h3>
             <table id="extraDeckCardsTable" class="cardTable" style="height: 90%;">
-                <td class="noMatchMessage" hidden="true">No Cards</td>
+                <tbody></tbody>
             </table>
             <button id="saveDeck" type="button" onclick="saveDeck()">Save Deck</button>
         </div>
