Added check of username on login

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -23,12 +23,12 @@
                 <td><input type="password" id="password" name="password"  placeholder="password"
                     onkeydown="goToNext('submit', event)"></td> 
             </tr>
-
-            <input type="button" value="Log in" onclick="goToNext('submit', event)">
         </table>
+
+        <input type="button" value="Log in" onclick="goToNext('submit', event)">
     </form>
 
-    <a href="/signup">sign up</a>
+    <a href="/signup">Sign up</a>
 </body>
 
 </html>
