--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -20,12 +20,12 @@
                 <th>Password:</th>
                 <td><input type="password" id="password" name="password"  placeholder="password"></td> 
             </tr>
-
-            <input type="submit" id="submit" value="Sign up">
         </table>
+
+        <input type="submit" id="submit" value="Sign up">
     </form>
 
-    <a href="/login"><Login/a>
+    <a href="/login">Log in</a>
 </body>
 
 </html>
