--- a/views/pages/deckBuilder.ejs
+++ b/views/pages/deckBuilder.ejs
@@ -15,6 +15,10 @@
     <div class="horizontalAlignContainer">
         <div id="collection" class="deckBuilderTable">
             <h3>Collection</h3>
+            <button onclick="changeSortType(1)">Alphabetical</button>
+            <button onclick="changeSortType(2)">Stars</button>
+            <button onclick="changeSortType(3)">Value (Low - High)</button>
+            <button onclick="changeSortType(4)">Value (High - Low)</button>
             <table id="collectionCardsTable" class="cardTable" style="height: 90%;">
                 <tbody></tbody>
             </table>
