--- a/views/pages/pack-opener.ejs
+++ b/views/pages/pack-opener.ejs
@@ -5,11 +5,11 @@
         <link rel="stylesheet" href="/stylesheets/packOpener.css">
     </head>
 
-    <body>
-        <%- include ("../partials/aio_dld_header.ejs") %>
+    <%- include ("../partials/aio_dld_header.ejs") %>
 
+    <body>
         <div class="columnLeft">
-            <h1><%= name %></h1>
+            <h1 id="boxname"><%= name %></h1>
 
             Packs Left: <%= packsleft %><br><br>
 
