--- a/views/partials/aio_dld_header.ejs
+++ b/views/partials/aio_dld_header.ejs
@@ -8,7 +8,7 @@
 <style>
     /* Note, needs every page this applies to have CSS as following:
     body {
-        margin: 0%
+        margin: 0%;
     }
     at a minimum */
 
